<resources>
    <string name="app_name">ToDoList</string>
    <string name="MyTasks">Мои дела</string>
    <string name="done">Выполнено —</string>
    <string name="buy_smth">Купить что-то</string>
    <string name="new_">Новое</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">coхранить</string>
    <string name="what_to_do">Что надо сделать...</string>
    <string name="Importance">Важность</string>
    <string name="no">нет</string>
    <string name="make_to">Сделать до</string>
    <string name="_2_2021">2 июня 2021</string>
    <string name="Delete">Удалить</string>
    <string name="Low">Низкая</string>
    <string name="High">!! Высокая</string>
    <string name="No">Нет</string>
    <string name="Ready">Готово</string>
    <string name="Cancel">Отмена</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="MoveUp">Верх</string>
    <string name="MoveDown">Вниз</string>

    <string name="date_of_create">Дата создания</string>
    <string name="date_of_change">Дата изменения</string>
    <string name="deadline">Дедлайн</string>

    <string name="retry">Ошибка синхронизации данных, пожалуйста обновите список</string>
    <string name="refresh">Обновить</string>
    <string name="Settings">Настройки</string>
    <string name="app_theme">Тема приложения</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Темная</string>
    <string name="system_theme">Как в системе</string>

    <string name="time_has_already_passed">Введенное время уже прошло</string>
    <string name="deadline_notifications">Уведомления о дедлайне</string>
    <string name="Deadline_missed">Дедлайн пропущен!</string>

    <string name="Send">Поделиться</string>
</resources>