<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="164dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/moveUpButton"
        style="@style/PopUpMenuField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MoveUp" />

    <TextView
        android:id="@+id/moveDownButton"
        style="@style/PopUpMenuField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MoveDown" />

    <TextView
        android:id="@+id/deleteButton"
        style="@style/PopUpMenuField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete"/>

</androidx.appcompat.widget.LinearLayoutCompat>