<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="164dp"
    android:background="?android:attr/colorForeground">

    <TextView
        android:id="@+id/noTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ImportancePopUpMenu"
        android:text="@string/No"/>
    <TextView
        android:id="@+id/lowTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ImportancePopUpMenu"
        android:text="@string/Low"/>
    <TextView
        android:id="@+id/highTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ImportancePopUpMenu"
        android:text="@string/High"
        android:textColor="@color/red"/>

</androidx.appcompat.widget.LinearLayoutCompat>