<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EditTaskFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="48dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/editTextContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                style="@style/Widget.Material3.CardView.Elevated">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="104dp"
                    android:hint="@string/what_to_do"
                    android:padding="16dp"
                    android:textSize="@dimen/body_text_size"
                    style="@style/ThemeOverlay.Material3.TextInputEditText"
                    android:background="@null"
                    android:lineHeight="@dimen/body_line_height"
                    android:gravity="top"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/importanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Importance"
                android:textSize="@dimen/body_text_size"
                android:lineHeight="@dimen/body_line_height"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@id/editTextContainer"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/importanceStateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="?android:attr/textColorTertiary"
                app:layout_constraintTop_toBottomOf="@id/importanceTextView"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/importanceDeadlineDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/importanceStateTextView"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deadlineTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_to"
                android:textSize="@dimen/body_text_size"
                android:lineHeight="@dimen/body_line_height"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/importanceDeadlineDivider"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deadlineDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_2021"
                app:layout_constraintTop_toBottomOf="@id/deadlineTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/dateSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/deadlineTextView"
                app:layout_constraintBottom_toBottomOf="@id/deadlineDateTextView"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/bottomDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/deadlineDateTextView"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:iconGravity="start"
                app:icon="@drawable/ic_baseline_delete_24"
                android:textAllCaps="false"
                android:text="@string/Delete"
                android:layout_marginTop="5dp"
                style="@style/Widget.Material3.Button.TextButton"
                app:layout_constraintTop_toBottomOf="@id/bottomDivider"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="16dp">

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text_size"
            android:lineHeight="@dimen/body_line_height"
            android:text="@string/save"
            android:padding="0dp"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:id="@+id/disablePanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#83000000"
        android:visibility="gone"
        android:clickable="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/datePickerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/pickDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/Ready"
            app:layout_constraintEnd_toEndOf="@id/datePicker"
            app:layout_constraintBottom_toBottomOf="@id/datePicker"/>

        <Button
            android:id="@+id/cancelPickDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/Cancel"
            app:layout_constraintEnd_toStartOf="@id/pickDateButton"
            app:layout_constraintBottom_toBottomOf="@id/pickDateButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>