<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/myTaskTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyTasks"
            android:textSize="@dimen/large_title_text_size"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="60dp"
            android:layout_marginTop="82dp"/>

        <TextView
            android:id="@+id/doneInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            style="@style/secondaryText"

            app:layout_constraintTop_toBottomOf="@id/myTaskTextView"
            app:layout_constraintLeft_toLeftOf="@id/myTaskTextView"
            android:layout_marginTop="6dp"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/visibility"
            android:tint="@color/blue"

            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toTopOf="@id/doneInfoTextView"
            app:layout_constraintBottom_toBottomOf="@id/doneInfoTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doneInfoTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="19dp"
            app:cardBackgroundColor="?android:attr/colorSecondary"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/toDoListRecycleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="3"
                    tools:listitem="@layout/task"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_"
                    android:textColor="?android:attr/textColorTertiary"
                    android:paddingStart="52dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:textSize="@dimen/body_text_size"
                    android:lineHeight="@dimen/body_line_height"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add"
            app:backgroundTint="@color/blue"
            app:tint="@color/white"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>